modificações semi concluídas - faltando só o funcional

--- a/info-pet/info.html
+++ b/info-pet/info.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadê meu pet?</title>
-  <link rel="stylesheet" href="info.css">
+  <link rel="stylesheet" href="style/info.css">
 
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
       </a>
   
       <rect class="shape" height="60" width="320" />
-      <a href="../index.html" class="header-volta">
+      <a href="/tela-servico/index.html" class="header-volta">
         <img src="/Assets/Icone/Voltar.png" alt="seta-voltar">
         <span>Voltar para Home</span>
       </a>
@@ -60,7 +60,9 @@
                 </div>
                 <div class="map">
                   <p class="font-teste43">Endereço</p>
-                  <img src="../Assets/Map/endereco.png" alt="endereco">
+                  <a href="https://www.google.com.br/maps">
+                    <img src="../Assets/Map/endereco.png" alt="endereco">
+                  </a>
                 </div>
               </div>
 
