correções nas tag a de link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadê meu pet?</title>
-  <link rel="stylesheet" href="css/style-login.css">
+  <link rel="stylesheet" href="css-global/style-login.css">
 </head>
 <body>
 
@@ -26,7 +26,7 @@
       </main>
       
       
-      <a href="/cadastro/index.html">
+      <a href="/cadastro/index.html" class="cadastra">
         <button class="btn-acessa">
           <span class="btn-img"><img src="/Assets/img-login/seta-ir.png" alt="click"></span>
           <span class="btn-text">Cadastrar um resgate</span>
