--- a/cadastro/index.html
+++ b/cadastro/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadê meu pet?</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -105,7 +105,7 @@
             </fieldset>
             <!-- <a href="../ProjetoPI/fistst/modal.html"> -->
                 <button type="submit">
-                    <a href="/tela-servico/index.html">
+                    <a href="/tela-servico/index.html" class="cadastra" >
                         Cadastrar o seu resgate
                     </a>
                 </button>
