--- a/tela-servico/index.html
+++ b/tela-servico/index.html
@@ -329,7 +329,7 @@
     <div class="container-fluid container-background">
       <div class="row footer-width">
 
-        <div class="col-md-3">
+        <div class="col-md-3 redes-sociais01">
           <h5 class="text-uppercase font-weight-bold mb-4">
             <img class="img-footer" src="/Assets/Logo/Logo.png" alt="logo">
           </h5>
