correções no logo

--- a/info-pet/info.html
+++ b/info-pet/info.html
@@ -14,7 +14,7 @@
   <div class="container-info">
     <header>
       <a href="../index.html" class="header-logo">
-        <img src="/Assets/Logo/Logo.png" alt="">
+        <img src="/Assets/Logo/Logo.png" alt="logo" class="logo-container"> 
       </a>
   
       <rect class="shape" height="60" width="320" />
